tests/sksl/errors/ArrayUnspecifiedDimensions.dsl.glsl
### Compilation failed:

error: expected integer literal, but found '1.'
error: expected a type, but found ']'
error: expected array dimension

3 errors
